Added new destinations

--- a/css/app.css
+++ b/css/app.css
@@ -55,6 +55,14 @@ h2 {
     background-color: #4dd0e1;
 }
 
-#barcelona {
+#saopaolo {
     background-color: #800000;
+}
+
+#goa {
+    background-color: #01579b;
+}
+
+#andamans {
+    background-color: #006400;
 }
